# IOTA-value-spammer

./: .env.example  Cargo.toml  LICENSE  README.md
src/: main.rs
