[package]
name = "iota_value_spammer"
version = "0.1.0"
authors = ["Thoralf-M"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-client = {git = "https://github.com/iotaledger/iota.rs", rev = "3e5af8438347feb0d4421ee3db2759976d335057" }
hex = "0.4"
dotenv = "0.15"
tokio = { version = "1.5"}