[package]
name = "iota_value_spammer"
version = "0.1.0"
authors = ["Thoralf-M"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-client = {git = "https://github.com/iotaledger/iota.rs", rev = "2c8db67580995127ccfdbf012c5c86ce12d4a3bc" }
hex = "0.4"
dotenv = "0.15"
tokio = { version = "1.12"}